--- a/design.html
+++ b/design.html
@@ -7,7 +7,7 @@
 
     <!--Title logo-->
     <link rel="icon" href="../images/Logo.png">
-    <title>Employees | Ceylon Walls</title>
+    <title>Designs | Ceylon Walls</title>
 
     <!--my css file-->
     <link href="systemCss.css" rel="stylesheet">
@@ -31,6 +31,7 @@
 
     <div class="row header">
         <div class="col-4 p-4 ">
+
             <button class="btn fa fa-2x" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions"><i
                     class="fa-solid fa-bars" style="color: #ffffff;"></i>
@@ -120,14 +121,13 @@
         <!--TITLE-->
         <div class="col-8 p-4">
             <div class="row">
-                <div class="col-1">
-                    <i class="fa-solid fa-users fa-2x" style="color: #ffffff;"></i>
+                <div class="col-1 text-end">
+                    <i class="fa-solid fa-user fa-2x" style="color: #ffffff;"></i>
                 </div>
                 <div class="col-11">
-                    <h2 style="color: #ffffff;">Employees</h2>
+                    <h2 style="color: #ffffff;">Designs</h2>
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -138,56 +138,57 @@
         <div class="col-8">
 
             <!--ADD BUTTON-->
-            <div class="row">
+            <div class="row text-end">
                 <div class="col-8"></div>
-                <div class="col-4 text-end">
+                <div class="col-4">
                     <button class="btn" style="color: #005eff;" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i
                             class="fa-regular fa-square-plus" style="color: #005eff;"></i> <b>New</b></button>
                     <button type="button" class="btn"><i class="fa-solid fa-print" style="color: #000000;"></i><b>
                             Print</b></button>
                 </div>
+            </div>
 
-                <div class="card">
-                    <div class="card-body ">
-                        <table id="tableUsers" class="table table-striped table-hover ">
-                            <thead class="table-dark text-start">
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Name</th>
-                                    <th>NIC</th>
-                                    <th>Contact No</th>
-                                    <th>Email</th>
-                                    <th>Civil Status</th>
-                                    <th>Status</th>
-                                    <th>Options</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Nimal Perera</td>
-                                    <td>200089546327</td>
-                                    <td>0774589652</td>
-                                    <td>nimal.p@gmail.com</td>
-                                    <td>Married</td>
-                                    <td>Active</td>
-                                    <td>
-                                        <button class="options-btn"><i class="fa-solid fa-eye"
-                                                style="color: #071731;"></i></button>
-                                        <button class="options-btn"><i class="fa-solid fa-pen-to-square"
-                                                style="color: #089131;"></i></button>
-                                        <button class="options-btn"><i class="fa-solid fa-trash-can"
-                                                style="color: #fd0d0d;"></i></button>
-                                    </td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+            <div class="card">
+                <div class="card-body ">
+                    <table id="tableUsers" class="table table-striped table-hover ">
+                        <thead class="table-dark text-start">
+                            <tr>
+                                <th>Design Code</th>
+                                <th>Image</th>
+                                <th>Name</th>
+                                <th>Category</th>
+                                <th>Status</th>
+                                <th>Notes</th>
+                                <th>Options</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+
+                                <td>
+                                    <button class="options-btn"><i class="fa-solid fa-eye"
+                                            style="color: #071731;"></i></button>
+                                    <button class="options-btn"><i class="fa-solid fa-pen-to-square"
+                                            style="color: #089131;"></i></button>
+                                    <button class="options-btn"><i class="fa-solid fa-trash-can"
+                                            style="color: #fd0d0d;"></i></button>
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+
                 </div>
             </div>
             <div class="col-2"></div>
         </div>
+
 
         <!--FORM SECTION-->
 
@@ -217,94 +218,117 @@
 
                                     <form action="">
 
-                                        <!--full name field-->
-                                        <div class="row">
-                                            <div class="input-group">
-                                                <span class="input-group-text col-3 fw-bold"
-                                                    style="background-color:#343a40; color: #ffffff;"
-                                                    id="fullName">Full
-                                                    Name<span class="text-danger"> *</span></span>
-                                                <input type="text" class="form-control" placeholder="Type Full Name...">
-                                            </div>
-                                        </div>
 
 
-                                        <!--NIC field-->
+                                        <!--design code filed-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="nic">NIC<span class="text-danger"> *</span></span>
-                                                <input type="text" class="form-control"
-                                                    placeholder="Type valid ID number...">
+                                                    id="designCode">Design code</span>
+                                                <input type="text" class="form-control" 
+                                                    disabled>
                                             </div>
                                         </div>
 
 
-                                        <!--Contact No field-->
+                                        <!--photo filed-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="contactNo">Contact No<span class="text-danger">
+                                                    id="image">Image<span class="text-danger">
+                                                        *</span></span>
+                                                <input type="file" class="form-control" required>
+                                            </div>
+                                        </div>
+
+
+                                        <!--image name field-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="imageName">Image Name<span class="text-danger">
                                                         *</span></span>
                                                 <input type="text" class="form-control"
-                                                    placeholder="Type 10-digit number..."> 
+                                                    placeholder="Type Design Name..." required>
                                             </div>
                                         </div>
 
-
-                                        <!--Email field-->
+                                        <!-- category datalist-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="email">Email<span class="text-danger">
+                                                    id="category">Category<span class="text-danger">
                                                         *</span></span>
-                                                <input type="email" class="form-control" placeholder="Type your email...">
+
+
+                                                <input class="form-control" list="datalistOptions" id="exampleDataList"
+                                                    placeholder="Type to search...">
+                                                <datalist id="datalistOptions">
+                                                    <option value="Boho Art">
+                                                    <option value="Psydelic Art">
+                                                    <option value="Religious Art - Buddhist">
+                                                    <option value="Religious Art - Catholic">
+                                                    <option value="Floral Art">
+                                                </datalist>
                                             </div>
                                         </div>
 
-
-                                        <!--Civil status-->
+                                        <!-- stauts radiobutton-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="civilStatus">Civil Status<span class="text-danger">
+                                                    id="status">Status<span class="text-danger">
                                                         *</span></span>
-                                                <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="radio"
-                                                        name="single" id="inlineRadio1" value="option1">
-                                                    <label class="form-check-label" for="inlineRadio1">Single</label>
+
+                                                <div class="form-check">
+                                                    <input class="form-check-input m-2" type="radio"
+                                                        name="flexRadioDefault" id="flexRadioDefault2" checked>
+                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                        Company Design
+                                                    </label>
                                                 </div>
-                                                <div class="form-check form-check-inline m-2">
-                                                    <input class="form-check-input" type="radio"
-                                                        name="married" id="inlineRadio2" value="option2">
-                                                    <label class="form-check-label" for="inlineRadio2">Married</label>
+                                                <div class="form-check">
+                                                    <input class="form-check-input m-2" type="radio"
+                                                        name="flexRadioDefault" id="flexRadioDefault2">
+                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                        Customer Design
+                                                    </label>
                                                 </div>
                                             </div>
                                         </div>
 
-
-                                        <!--status switch-->
+                                        <!-- orientation radiobutton-->
                                         <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="basic-addon1">Status<span class="text-danger">
+                                                    id="imageOrientation">Orientation<span class="text-danger">
                                                         *</span></span>
 
-                                                <div class="form-check form-switch m-2">
-                                                    <input class="form-check-input" type="checkbox"
-                                                        id="flexSwitchCheckChecked" checked>
-                                                    <label class="form-check-label"
-                                                        for="flexSwitchCheckChecked">Active</label>
+                                                <div class="form-check">
+                                                    <input class="form-check-input m-2" type="radio" name="orientation"
+                                                        id="portrait" checked>
+                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                        Portrait
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input m-2" type="radio" name="orientation"
+                                                        id="landscape">
+                                                    <label class="form-check-label" for="flexRadioDefault2">
+                                                        Landscape
+                                                    </label>
                                                 </div>
                                             </div>
                                         </div>
@@ -322,13 +346,13 @@
                                                 <button type="submit" id="submit" value="Add Employee"
                                                     class="btn btn-success"><i class="fa-solid fa-user-plus"
                                                         style="color: #ffffff;"></i> Add</button>
+
                                             </div>
                                         </div>
                                     </form>
                                 </div>
                             </div>
                         </div>
-
                     </div>
                 </div>
             </div>
