--- a/users.html
+++ b/users.html
@@ -179,24 +179,6 @@
                                             style="color: #fd0d0d;"></i></button>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Amal Devinda</td>
-                                <td>devindaamal</td>
-                                <td>dev45amal</td>
-                                <td>amalde@gamil.com</td>
-                                <td>Sales Manager</td>
-                                <td>Inactive</td>
-                                <td>
-                                    <button class="options-btn"><i class="fa-solid fa-eye"
-                                            style="color: #071731;"></i></button>
-                                    <button class="options-btn"><i class="fa-solid fa-pen-to-square"
-                                            style="color: #089131;"></i></button>
-                                    <button class="options-btn"><i class="fa-solid fa-trash-can"
-                                            style="color: #fd0d0d;"></i></button>
-                                </td>
-                            </tr>
-                        </tbody>
                     </table>
 
                 </div>
@@ -234,31 +216,24 @@
                                     <form action="">
 
                                         <!--employees dropdown-->
-                                        <div class="row">
+                                        <div class="row mt-3">
                                             <div class="input-group">
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="basic-addon1">Employee<span class="text-danger"> *</span></span>
-                                                                                                    <div class="btn-group dropend">
-                                                        <button type="button" class="btn dropdown-toggle"
-                                                            data-bs-toggle="dropdown" aria-expanded="false">
-                                                           Select Name
-                                                        </button>
-                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                                                        <li><button class="dropdown-item" type="button">Amal
-                                                                Perera</button>
-                                                        </li>
-                                                        <li><button class="dropdown-item" type="button">Nimal
-                                                                Silva</button>
-                                                        </li>
-                                                        <li><button class="dropdown-item" type="button">Sadeesh
-                                                                Venushka</button>
-                                                        </li>
-                                                    </ul>
-                                                </div>
+                                                    id="employeeName">Employee<span class="text-danger">
+                                                        *</span></span>
+
+
+                                                <input class="form-control" list="datalistOptions" id="exampleDataList"
+                                                    placeholder="Type to search...">
+                                                <datalist id="datalistOptions">
+                                                    <option value="Amal Perera">
+                                                    <option value="Nimal Fernando">
+                                                </datalist>
                                             </div>
                                         </div>
+
 
                                         <!--username filed-->
                                         <div class="row mt-3">
@@ -266,9 +241,9 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="basic-addon1">Username<span class="text-danger">
+                                                    id="username">Username<span class="text-danger">
                                                         *</span></span>
-                                                <input type="text" class="form-control" placeholder="Enter username"
+                                                <input type="text" class="form-control" placeholder="Type Username..."
                                                     required>
                                             </div>
                                         </div>
@@ -279,89 +254,88 @@
                                                 <span class="input-group-text col-3 fw-bold"
                                                     onClick=this.parentNode.children[1].focus();
                                                     style="background-color:#343a40; color: #ffffff;"
-                                                    id="basic-addon1">Password<span class="text-danger">
+                                                    id="password">Password<span class="text-danger">
                                                         *</span></span>
-                                                <input type="password" class="form-control" placeholder="Enter password"
+                                                <input type="password" class="form-control"
+                                                    placeholder="Type Password..." required>
+                                            </div>
+                                        </div>
+
+                                        <!--email-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="email">Email<span class="text-danger">
+                                                        *</span></span>
+                                                <input type="email" class="form-control" placeholder="Type email..."
                                                     required>
                                             </div>
                                         </div>
-                                        
-                                            <!--email-->
-                                            <div class="row mt-3">
-                                                <div class="input-group">
-                                                    <span class="input-group-text col-3 fw-bold"
-                                                        onClick=this.parentNode.children[1].focus();
-                                                        style="background-color:#343a40; color: #ffffff;"
-                                                        id="basic-addon1">Email<span class="text-danger">
-                                                            *</span></span>
-                                                    <input type="email" class="form-control" placeholder="Enter email"
-                                                        required>
+
+                                        <!--roles checkboxes-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="roles">Roles<span class="text-danger">
+                                                        *</span></span>
+
+                                                <div class="form-check form-check-inline m-2">
+                                                    <input class="form-check-input" type="checkbox" id="owner"
+                                                        value="owner">
+                                                    <label class="form-check-label" for="inlineCheckbox1">Owner</label>
+                                                </div>
+                                                <div class="form-check form-check-inline m-2">
+                                                    <input class="form-check-input" type="checkbox" id="sales manager"
+                                                        value="Sales">
+                                                    <label class="form-check-label" for="inlineCheckbox2">Sales
+                                                        Manager</label>
+                                                </div>
+                                                <div class="form-check form-check-inline m-2">
+                                                    <input class="form-check-input" type="checkbox" id="Cashier"
+                                                        value="Cashier">
+                                                    <label class="form-check-label"
+                                                        for="inlineCheckbox2">Cashier</label>
                                                 </div>
                                             </div>
+                                        </div>
 
-                                                <!--roles checkboxes-->
-                                                <div class="row mt-3">
-                                                    <div class="input-group">
-                                                        <span class="input-group-text col-3 fw-bold"
-                                                            onClick=this.parentNode.children[1].focus();
-                                                            style="background-color:#343a40; color: #ffffff;"
-                                                            id="basic-addon1">Roles<span class="text-danger">
-                                                                *</span></span>
+                                        <!--status switch-->
+                                        <div class="row mt-3">
+                                            <div class="input-group">
+                                                <span class="input-group-text col-3 fw-bold"
+                                                    onClick=this.parentNode.children[1].focus();
+                                                    style="background-color:#343a40; color: #ffffff;"
+                                                    id="basic-addon1">Status<span class="text-danger">
+                                                        *</span></span>
 
-                                                        <div class="form-check form-check-inline m-2">
-                                                            <input class="form-check-input" type="checkbox"
-                                                                id="inlineCheckbox1" value="owner">
-                                                            <label class="form-check-label"
-                                                                for="inlineCheckbox1">Owner</label>
-                                                        </div>
-                                                        <div class="form-check form-check-inline m-2">
-                                                            <input class="form-check-input" type="checkbox"
-                                                                id="inlineCheckbox2" value="Sales">
-                                                            <label class="form-check-label" for="inlineCheckbox2">Sales
-                                                                Manager</label>
-                                                        </div>
-                                                        <div class="form-check form-check-inline m-2">
-                                                            <input class="form-check-input" type="checkbox"
-                                                                id="inlineCheckbox2" value="Cashier">
-                                                            <label class="form-check-label"
-                                                                for="inlineCheckbox2">Cashier</label>
-                                                        </div>
-                                                    </div>
+                                                <div class="form-check form-switch m-2">
+                                                    <input class="form-check-input" type="checkbox"
+                                                        id="flexSwitchCheckChecked" checked>
+                                                    <label class="form-check-label"
+                                                        for="flexSwitchCheckChecked">Active</label>
                                                 </div>
+                                            </div>
+                                        </div>
 
-                                                    <!--status switch-->
-                                                    <div class="row mt-3">
-                                                        <div class="input-group">
-                                                            <span class="input-group-text col-3 fw-bold"
-                                                                onClick=this.parentNode.children[1].focus();
-                                                                style="background-color:#343a40; color: #ffffff;"
-                                                                id="basic-addon1">Status<span class="text-danger">
-                                                                    *</span></span>
+                                        <!--create user and clear button-->
+                                        <div class="row mt-5">
+                                            <div class="col-6 text-start">
+                                                <button type="reset" id="submit" value="Clear"
+                                                    class="btn btn-secondary"><i class="fa-solid fa-eraser"
+                                                        style="color: #ffffff;"></i> Clear</button>
+                                            </div>
 
-                                                            <div class="form-check form-switch m-2">
-                                                                <input class="form-check-input" type="checkbox"
-                                                                    id="flexSwitchCheckChecked" checked>
-                                                                <label class="form-check-label"
-                                                                    for="flexSwitchCheckChecked">Active</label>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+                                            <div class="col-6 text-start">
+                                                <button type="submit" id="submit" value="Add Employee"
+                                                    class="btn btn-success"><i class="fa-solid fa-user-plus"
+                                                        style="color: #ffffff;"></i> Add</button>
 
-                                                    <!--create user and clear button-->
-                                                    <div class="row mt-5">
-                                                        <div class="col-6 text-start">
-                                                            <button type="reset" id="submit" value="Clear"
-                                                                class="btn btn-secondary"><i class="fa-solid fa-eraser"
-                                                                    style="color: #ffffff;"></i> Clear</button>
-                                                        </div>
-
-                                                        <div class="col-6 text-start">
-                                                            <button type="submit" id="submit" value="Add Employee"
-                                                                class="btn btn-success"><i class="fa-solid fa-user-plus"
-                                                                    style="color: #ffffff;"></i> Add</button>
-
-                                                        </div>
-                                                    </div>
+                                            </div>
+                                        </div>
                                     </form>
                                 </div>
                             </div>
